# claudeck

./: .gitignore  AGENT.md  README.md  STREAM_DECK_PLUGIN_REBUILD_PLAN.md  claude_deck_wrapper.py  pyproject.toml  test_http_server.py
claude-deck-plugin-v2/context/: package-lock.json  package.json
claude-deck-plugin-v2/context/de.co.context.claudedeck.sdPlugin/: manifest.json
claude-deck-plugin-v2/context/de.co.context.claudedeck.sdPlugin/ui/: command-pi.html
claude-deck-plugin-v2/context/src/: claude-api.ts  plugin.ts
claude-deck-plugin-v2/context/src/actions/: command.ts  increment-counter.ts
claudeck-plugin/context/: rollup.config.mjs
claudeck-plugin/context/de.co.context.claudedeck.sdPlugin/: manifest.json
claudeck-plugin/context/de.co.context.claudedeck.sdPlugin/ui/: command-pi.html  model-pi.html
claudeck-plugin/context/src/: claude-api.ts  plugin.ts
claudeck-plugin/context/src/actions/: command.ts  escape.ts  model.ts  ok.ts  shift-tab.ts
prompts/: ICON_PROMPTS.md
streamdeck-plugin/: claude-deck.streamDeckPlugin
streamdeck-plugin/com.claude.deck.sdPlugin/: manifest.json  plugin.js  propertyinspector.html
tests/: test_wrapper.py
wrapper/: __init__.py  claude_deck_wrapper.py
